--- a/src/belajardatabase/MainWindow.form
+++ b/src/belajardatabase/MainWindow.form
@@ -55,12 +55,20 @@
             <Property name="text" type="java.lang.String" value="Penyewaan"/>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="penyeasd">
+            <MenuItem class="javax.swing.JMenuItem" name="penyewaan_listing">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Listing"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="penyeasdActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="penyewaan_listingActionPerformed"/>
+              </Events>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="penyewaan_riwayatSewa">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Riwayat Sewa"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="penyewaan_riwayatSewaActionPerformed"/>
               </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="menuPenyewaan_tambah">
@@ -83,9 +91,6 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[626, 666]"/>
-    </Property>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[626, 666]"/>
     </Property>
