--- a/src/belajardatabase/mobil/Edit.form
+++ b/src/belajardatabase/mobil/Edit.form
@@ -34,7 +34,7 @@
                   <Component id="fieldPanel" alignment="0" pref="357" max="32767" attributes="0"/>
                   <Component id="jScrollPane2" alignment="0" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="249" max="32767" attributes="0"/>
+              <EmptySpace pref="255" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -68,6 +68,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="noPolisiField">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
@@ -111,7 +114,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel7">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Denda Per Hari"/>
+            <Property name="text" type="java.lang.String" value="Denda Per Jam"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="dendaPerJamField">
@@ -138,7 +141,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="simpanButton">
           <Properties>
-            <Property name="text" type="java.lang.String" value="SIMPAN"/>
+            <Property name="text" type="java.lang.String" value="UBAH"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="simpanButtonActionPerformed"/>
@@ -151,7 +154,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="18" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Tambah Mobil"/>
+        <Property name="text" type="java.lang.String" value="Ubah Data Mobil"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane2">
