--- a/src/belajardatabase/mobil/View.form
+++ b/src/belajardatabase/mobil/View.form
@@ -172,6 +172,7 @@
                 </Component>
                 <Component class="javax.swing.JTextField" name="option_sewa12JamField">
                   <Properties>
+                    <Property name="editable" type="boolean" value="false"/>
                     <Property name="text" type="java.lang.String" value="0"/>
                   </Properties>
                 </Component>
@@ -588,12 +589,18 @@
                 <Property name="text" type="java.lang.String" value="Ubah"/>
                 <Property name="enabled" type="boolean" value="false"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ubahButtonActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="hapusButton">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Hapus"/>
                 <Property name="enabled" type="boolean" value="false"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="hapusButtonActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
